--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "npx playwright install chromium"
+    "start": "npx playwright install chromium && node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
